// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CurrencyLogo > renders a currency logo with network logo 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
    data-testid="token-logo"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
      style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
    />
    <div
      data-testid="img-token-image"
      style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
    >
      <img
        height="40"
        src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
        style="object-fit: cover; width: 40px; height: 40px; border-radius: 40px; z-index: 1;"
        width="40"
      />
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
      style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
        data-testid="network-logo-42161"
        style="--c-z: 10; width: 19px; height: 19px; border-radius: 5.7px; border-width: 1.5px;"
      >
        <div
          class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          style="object-fit: contain; width: 17px; height: 17px;"
        >
          <div
            class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
            style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="mock-asset-ARBITRUM_LOGO.png"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CurrencyLogo > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
    data-testid="token-logo"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
      style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
    />
    <div
      data-testid="img-token-image"
      style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
    >
      <img
        height="40"
        src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png"
        style="object-fit: cover; width: 40px; height: 40px; border-radius: 40px; z-index: 1;"
        width="40"
      />
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
      style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
        data-testid="network-logo-1"
        style="--c-z: 10; width: 19px; height: 19px; border-radius: 5.7px; border-width: 1.5px;"
      >
        <div
          class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          style="object-fit: contain; width: 17px; height: 17px;"
        >
          <div
            class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
            style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="mock-asset-ETHEREUM_LOGO.png"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
